<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wosaosao</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_string">Books Lending System</string>
    <string name="book_lending">Lending Books</string>
    <string name="book_return">Return Books</string>
    <string name="book_export">Export to File</string>
    <string name="title_activity_scanning">ScanningActivity</string>
    <string name="scan_result_title">Scanning Result </string>
    <string name="scan_ISBN">Scanning Books</string>
    <string name="scan_staff">Scanning Staff Info</string>
    <string name="scan_result_sample">This is a sample text for result!!!</string>

    <!-- add the strings for BooksPutIn class -->
    <string name="title_activity_books_put_in">BooksPutIn</string>
    <string name="books_put_in">Books Put In</string>
    <string name="book_category">Books Category</string>
    <string name="book_category_index">Books Category Index</string>

    <string name="book_bought_date">Book Bought Date</string>
    <string name="book_applicant_dep">Book Applicant Dep</string>

    <string name="book_applicant">Book Applicant</string>
    <string name="book_actual_price">Book Actual Price</string>

    <!--add string array for book category -->

    <string-array name="book_category_spinner_eng">
        <item>CKT-CD ZH-</item>
        <item>CKT-CD YF-BC-</item>
        <item>CKT-CD YF-SJ-</item>
        <item>CKT-CD YF-WL-</item>
        <item>CKT-CD YF-CS-</item>
    </string-array>
<!-- not used, see values-zh-rCN/string.xml -->
    <string-array name="book_category_spinner">
        <item>综合</item>
        <item>编程</item>
        <item>设计</item>
        <item>网络</item>
        <item>测试</item>
    </string-array>

    <!-- add strings for staff info-->
    <string name="staff_put_in">Stuffs Put In</string>

    <string name="add_all_info">Add All info to DB</string>
    
    <!-- jerry added -->
    <string name="title_activity_show_borrow">ShowBorrowActivity</string>
    <string name="title_activity_borrow_detail">BorrowDetailActivity</string>

    <!-- add the year, month, day strings -->
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>

    <!-- add the string for ScanningActivity's button book_lending_ok-->
    <string name="lending_ok">Add Info</string>

    <!-- add strings for activity StaffPutIn -->
    <string name="title_activity_staff_put_in">StaffPutIn</string>

    <!-- add the hint of these edit text widgets -->
    <string name="hint_bought_date">select date</string>
    <string name="hint_actual_price">actual price</string>
    <string name="hint_category_index">category index</string>

    <!-- add strings for notice-->
    <string name="notice_not_found_book">Not found the book</string>
    <string name="notice_read_bookinfo">Please wait, reading information...</string>
    <string name="notice_network_error">Network Error, Please check the network!</string>
    <string name="notice_get_staff_info_error">The info of the two-dimension code is error, please scan it again!</string>
    <string name="notice_success_insert_staff">Add Staff Success... ...</string>
    <string name="notice_failed_insert_staff">Add Staff Failure... ...</string>
    <string name="notice_borrow_success">Borrow Success!</string>
    <string name="notice_borrow_failed">Borrow Failed!</string>
    <string name="notice_add_bookInfo_success">Add Book Success!</string>
    <string name="notice_add_bookInfo_failed">Add Book Failure!</string>



</resources>
