<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".WosaoActivity">

    <TextView
        android:id="@+id/app_title"
        android:text="@string/main_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        />

    <LinearLayout
        android:id="@+id/book_container"
        android:layout_below="@id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"

        >
        <Button
            android:id="@+id/book_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/books_put_in"
            android:textSize="20sp"
            android:layout_margin="10dp"
        />
        <Button
            android:id="@+id/staff_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff_put_in"
            android:textSize="20sp"
            android:layout_margin="10dp"
         />
        <!-- android:gravity="center_vertical"-->
        <Button
            android:id="@+id/book_lending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_lending"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/book_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_return"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />


        <Button
            android:id="@+id/book_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_export"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />

     </LinearLayout>

</RelativeLayout>
