<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ckt.shrimp.wosaosao.BooksPutIn">

    <TextView
        android:id="@+id/book_putIn_title"
        android:text="@string/books_put_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/scan_books_container"
        android:layout_below="@id/book_putIn_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/scan_ISBN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_ISBN"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/scan_result_title"
            />
        <TextView
            android:id="@+id/scan_ISBN_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/scan_result_sample"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/add_others_info"
        android:layout_below="@id/scan_books_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        >
        <!-- the spinner -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/book_category"
         />
        <Spinner
            android:id="@+id/book_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
         />

        <!-- the category index -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/book_category_index"
        />
        <EditText
            android:id="@+id/category_index"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!-- the actual price  -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/book_actual_price"
            />
        <EditText
            android:id="@+id/actual_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!-- the date -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/book_bought_date"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contain_staff_info"
        android:layout_below="@id/add_others_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/scan_staff_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_staff"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/scan_result_title"
            />
        <TextView
            android:id="@+id/scan_stuff_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/scan_result_sample"
            />
        <Button
            android:id="@+id/add_all_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_all_info"
            android:textSize="20sp"
            />
    </LinearLayout>

</RelativeLayout>
